<?xml version="1.0"?>
<package format="2">
  <name>husky_highlevel_controller</name>
  <version>0.1.0</version>
  <description>The husky_highlevel_controller package</description>
  <maintainer email="p.krisztian@outlook.com">Ors-Krisztian Patakfalvi</maintainer>
  <license>BSD</license>
  <author email="p.krisztian@outlook.com">Ors-Krisztian Patakfalvi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
