<?xml version="1.0"?>
<package format="2">
  <name>husky_stop_after_crash</name>
  <version>0.1.0</version>
  <description>The husky_stop_after_crash package</description>
  <maintainer email="p.krisztian@outlook.com">Ors-Krisztian Patakfalvi</maintainer>
  <license>BSD</license>
  <author email="p.krisztian@outlook.com">Ors-Krisztian Patakfalvi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
